// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill renders 1`] = `
<div
  className="pill"
  data-advanced={false}
>
  This is my...
</div>
`;

exports[`Pill treats @ text differently 1`] = `
<div
  className="pill"
  data-advanced={false}
>
  @(exp)
</div>
`;
